--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,8 +1,9 @@
 Changelog:
 v8:
-- added compatibility with: Tibet, Flanders and Durrani civilizations,.
+- added compatibility with: Tibet (ready for download), Flanders and Durrani civilizations,.
 - slightly corrected Peter Kenilorea's icon,
-- slightly corrected Demtrius I's icon.
+- slightly corrected Demtrius I's icon,
+- fixed text bug.
 
 v7.1:
 - tweaked main file,
