--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,4 +1,7 @@
 Changelog:
+v21.1:
+- fixd SoI icon if non active player is the SoI owner;
+
 v21:
 - added missing Irrational (Enigmatic) personality with new texts;
 - changed a bit colouring of traits and personalities so they do not fade into background;
