--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,6 +1,7 @@
 Changelog:
 v22:
 - added compatibility with UCS v16;
+- added new changes from congress #6;
 
 v21.2:
 - review of the names, added unique letters to some, corrected few;
