--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,4 +1,7 @@
 Changelog:
+v22.0.1 and v22.0.2:
+- fixed lua bug;
+
 v22:
 - added compatibility with UCS v16;
 	- modified CitystateDiploPopup.lua to show new CS Attitide; deleted double function;
